# FactLens

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  test_pipeline_logic.py
database/: __init__.py  mongo_client.py
pipeline/: __init__.py  audio_extractor.py  claim_extractor.py  frame_extractor.py  merger.py  ocr_engine.py  transcriber.py  verifier.py
utils/: __init__.py  clean.py  time_format.py  video.py
